# py-silero-vad-lite

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build_and_publish.yml
silero_vad_lite/: CMakeLists.txt  silero_vad.py
src/silero_vad_lite/: CMakeLists.txt  __init__.py  silero_vad.cpp  silero_vad.py
tests/: smoke.py  test_silero_vad.py
